sources/phb/v17/4_Disciplines/b_Feats/4_Vitality/Brawling.md
****
Hand to hand combat was not looked on favorably in the past, lacking in sophistication. Now, most Verdun outside of the Nobility have little stigma around the concept. In fact, Brawling as a Discipline is a popular sport, as well as a training regime for Expeditioners inclined to learn it.

Brawling relies on only the body, allows practitioners to excel in situations of scarcity.

**Passive Effects**
`Your Unarmed and Improvised Weaponry become more Accurate, equal to your Brawling. The former is never Blunt, and has a minimum Damage of 1.`
****
Feat 1: **Square Up**
	*AP*: !0| *Qualities*: Stance|
	*"Footwork"*
	Pull your arms in, don't cross your feet.
	`For the Duration, Damage against you is less Vicious by half your Brawling (Min 1), and your Unarmed and Improvised Attacks are more Vicious by the same amount.`

Feat 2: **Combo**
	*AP*: 1| *Qualities*: Primary|
	*"Old reliable"*
	Brawling is about consistency, keeping your feet on the ground and your fist in their face.
	`You can make a number of 1_AP Unarmed or Improvised Strikes up to one plus your Brawling.`
	*Targets*
	`More than one Creature can be Struck in a Combo.`
	*Limits*
	`When you Combo, you choose the number of Strikes made before rolling, every Strike after the first makes all of them harder by one.`

Feat 3: **Pivot Kick**
	*AP*: 1| *Traits*: Primary, Movement|
	*"Be the wheel"*
	You shift to the side, turning angular momentum into force.
	`Maneuver and make a 1_AP Unarmed Strike as a part of the same Action. Hitting the Target allows you to displace them in any direction by up to half your Brawling. This Distance is increased if your Unarmed Attacks are Powerful.`
	*Combination*
	`When Comboing, a Pivot Kick can replace any one of its Strikes, but only if the Combo has three or more Strikes in total.`
	*Critical effect*
	`The Target is displaced twice as far.`

Feat 4: **Reverberation**
	*"Lasting consequences"*
	Every blow tells a story; the one yours tell has a worse ending than most.
	`Each time you hit a Creature with an Unarmed Strike, you leave a Pressure Point for 1 Minute, making them Vulnerable to you for 1 Minute.`
	*Execution*
	`When Striking (including within a Combo), you may Consume a Pressure Point to grant a Boon to your Attack.`
	*Shadow Boxing*
	`When choosing the number of Strikes in a Combo, you can add Feints instead of Strikes. Feints are Attacks which do not add any penalties to the Combo, but deal no Damage. Successful Feints do inflict Pressure Points. So, making a Combo with 2 Attacks and 4 Feints would allow you to roll all the Attacks with no Banes, but only the Strikes could deal or add to the Combo's Damage.`

Feat 5: **Pile-Driver**
	*AP*: 1| *Traits*: Primary, Movement|
	*"Back Down"*
	Brawling exploits everything, from earth to air, everything is a Weapon.
	`When a Creature is airborn/Falling within Meters equal to your Brawling, you can Leap to their Engagement and make a 1_AP Unarmed or Improvised Strike. If this hits, you both return to the ground and the Falling Damage Tier is added to that of your Strike. Your own Falling Damage is negated by successfully Pile-Driving.`
	*Combination*
	`When Comboing, a Pile-Driver can replace the last Strike, provided that a previous Pivot Kick in the Combo displaced the Target upwards.`
	*Critical effect*
	`You add your Brawling to the Tier of Falling Damage.`

Feat 6: **Full Sequence**
	*AP*: 3| *Qualities*: Primary, Strain_3|
	*"You are already dead"*
	You unleash a blinding sequence of strikes, each mounting on the effect of the last.
	`You Consume all the Pressure Points of a Target in your Engagement and can execute a Combo with up to 8 Strikes, every Strike gains Boons equal to the number of Pressure Points Consumed. Any of these Strikes can be Pivot Kicks or Pile-Drivers, ignoring their usual limitations.`

